RESOLVED FIXED23385
crash at com.apple.WebCore • WebCore::HTMLAnchorElement::isKeyboardFocusable
https://bugs.webkit.org/show_bug.cgi?id=23385
Summary crash at com.apple.WebCore • WebCore::HTMLAnchorElement::isKeyboardFocusable
chris fleizach
Reported 2009-01-16 09:55:56 PST
Option-tabbing through a page that has image map links causes Safari to crash. see attached page
Attachments
patch to fix crash when tabbing (5.63 KB, patch)
2009-01-16 09:59 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-01-16 09:56:16 PST
chris fleizach
Comment 2 2009-01-16 09:59:44 PST
Created attachment 26799 [details] patch to fix crash when tabbing
Darin Adler
Comment 3 2009-01-16 10:01:52 PST
Comment on attachment 26799 [details] patch to fix crash when tabbing r=me
chris fleizach
Comment 4 2009-01-16 10:06:55 PST
mitz
Comment 5 2009-03-12 01:47:26 PDT
*** Bug 19547 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.