Bug 23385: crash at com.apple.WebCore • WebCore::HTMLAnchorElement::isKeyboardFocusable https://bugs.webkit.org/show_bug.cgi?id=23385

Option-tabbing on page with image map links causes crash



Canonical link: https://commits.webkit.org/32169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39973 268f45cc-cd09-0410-ab3c-d52691b4dbfc